# lanuminous

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-run.sh  docker-compose.yml
.lantricate/staging/20260316T191706Z-a765cac7-03a1-4da3-8c84-845a7d04f3a9/: dnsmasq_main.conf  networking_main.network  nftables_main.nft  reverse_proxy_main.conf
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/agent/: mod.rs  service.rs
backend/src/api/: mod.rs  router.rs
backend/src/app/: mod.rs  services.rs
backend/src/cli/: mod.rs
backend/src/config/: loader.rs  mod.rs  normalize.rs  raw.rs
backend/src/deploy/: manifest.rs  mod.rs  planner.rs
backend/src/domain/: artifact.rs  firewall.rs  host.rs  metadata.rs  mod.rs  network.rs  remote_access.rs  services.rs  site.rs  wifi.rs
backend/src/remote_access/: mod.rs  planner.rs  provider.rs
backend/src/render/: apache2.rs  caddy.rs  dnsmasq.rs  haproxy.rs  mod.rs  networking.rs  nftables.rs  nginx.rs  traefik.rs
backend/src/util/: hashing.rs
backend/src/validate/: mod.rs  rules.rs
backend/tests/: agent.rs  config_loading.rs  normalization.rs  remote_access.rs  validation.rs
examples/site/: interfaces.yaml  site.yaml
examples/site/firewall/: policies.yaml  zones.yaml
examples/site/hosts/: ap1.yaml  ap2.yaml  ap3.yaml  ap4.yaml  ap5.yaml  ap6.yaml  ap7.yaml  ap8.yaml  gateway.yaml  jellyfin.yaml
examples/site/networks/: guest.yaml  iot.yaml  (+7 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
(+25 files in other folders)
